main-styles.css
*{
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    color: black;
}
.nav{
    grid-area: nav;
    display: grid;
    align-content: center;
    width: 100%;
    height: 70px;
    grid-template-areas: 
    "nav-text nav-buttons";
    background-color: #EDE8DF;
}

.nav-text{
    display: flex;
    align-items: center;
    grid-area: nav-text;
    padding: 15px;
}

.nav-buttons{
    display: flex;
    grid-area: nav-buttons;
    padding: 15px;
    margin-right: 20px;
    justify-self: end;
    gap: 10px;
}

.nav-buttons a{
    padding: 15px;
    border: #000000 solid 1px;
    background-color: #D5C9B5;
    text-decoration: none;
    color: #000000;
    border-radius: 5px;
}

.title {
    margin-left: 50px;
    margin-top: 20px;
    grid-area: title;
}

.img {
    display: grid;
    height: 500px;
    justify-content: center;
    align-content: center; 
}
.img img {
    border-radius: 1000px;
    margin-left: 50px;
    height: 300px;
}

@media (max-width: 700px) {
    .nav{
        height: auto;
        grid-template-areas: 
        "nav-text"
        "nav-buttons";
    }

    .nav-buttons a{
        padding: 8px;
        font-size: 12px;
    }

    .nav-buttons{
        padding: 8px;
        margin-right: 0;
        justify-self: center;
        flex-wrap: wrap;
    }

    .nav-text{
        justify-content: center;
    }
}

